quote view changes